--- a/app/css/style.css
+++ b/app/css/style.css
@@ -287,7 +287,7 @@ a {
   padding: 50px;
 }
 .main-nav__tab:hover .tab__submenu {
-  z-index: 1;
+  z-index: 2;
   opacity: 1;
   transition: opacity .5s .3s;
 
@@ -497,6 +497,115 @@ span.reasons-icon::before {
 
 
 
+span.important-icon::before {
+  background-image: url(../images/book.png);
+}
+.important__programs-wrapper {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+
+  margin: 0 10%;
+}
+.program-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: nowrap;
+
+  position: relative;
+  min-height: 500px;
+  min-width: 23%;
+  max-width: 23%;
+  margin: 20px 1%;
+  padding: 20px;
+
+  background-color: #c8e5fb;
+  border-top: 25px solid rgb(255, 206, 112);
+  border-bottom: 10px solid rgb(250, 189, 71);
+  border-radius: 20px 20px 0 0;
+  box-shadow: 2px 2px 10px rgb(70, 70, 70);
+}
+.program-card::before {
+  position: absolute;
+  top: 0px;
+  left: 50px;
+  content: "";
+  border: 25px solid transparent;
+  border-top: 15px solid rgb(255, 206, 112);
+}
+.program-card__title {
+  display: block;
+  width: 100%;
+  font-size: 1.2em;
+  font-weight: normal;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid rgb(78, 78, 78);
+}
+.program-card__description {
+  flex: 2;
+  font-size: .9em;
+}
+.program-card__price {
+  color: white;
+  font-size: 1.7em;
+}
+.program-card__read-more {
+  width: 60%;
+  min-height: 45px;
+  line-height: 45px;
+  font-size: 1.1em;
+  color: rgb(255, 169, 0);
+  text-align: center;
+  background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
+  background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 );
+  border: 1px solid rgba(62, 62, 62, 0.57);
+  opacity: 0.7;
+}
+.program-card__read-more:hover {
+  opacity: 1;
+  transition: opacity .3s;
+}
+/* СТРЕЛКИ (ОВРЕФЛОУ МЕШАЕТ)
+
+  .important__programs-wrapper::before {
+  position: absolute;
+  top: 50%;
+  margin-top: -24px;
+  left: -5%;
+  content: "";
+  height: 48px;
+  width: 48px;
+  border-top: 4px solid rgba(70, 70, 70, 0.5);
+  border-left: 4px solid rgba(70, 70, 70, 0.5);
+  transform: rotate(-45deg);
+
+  transition: border-color .3s;
+}
+.important__programs-wrapper::after {
+  position: absolute;
+  top: 50%;
+  margin-top: -24px;
+  right: -5%;
+  content: "";
+  height: 48px;
+  width: 48px;
+  border-top: 4px solid rgba(70, 70, 70, 0.5);
+  border-right: 4px solid rgba(70, 70, 70, 0.5);
+  transform: rotate(45deg);
+
+  transition: border-color .3s;
+}
+.important__programs-wrapper::after,
+.important__programs-wrapper::before  {
+  border-color: rgb(240, 189, 36);
+  transition: border-color .3s;
+}*/
+
 
 span.photo-icon::before {
   background-image: url(../images/camera.png);
@@ -590,15 +699,18 @@ span.staff-icon::before {
   position: relative;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
   align-items: stretch;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   align-content: flex-start;
+  overflow: hidden;
 
   width: 80%;
+  max-width: 80%;
   margin: 4vh 10% 0;
 }
-.medical-staff__profiles-wrapper::before {
+/*   СТРЕЛКИ (оверфлоу хидден мешает)
+
+  .medical-staff__profiles-wrapper::before {
   position: absolute;
   top: 50%;
   margin-top: -24px;
@@ -630,9 +742,10 @@ span.staff-icon::before {
 .medical-staff__profiles-wrapper:hover::before {
   border-color: rgb(240, 189, 36);
   transition: border-color .3s;
-}
+}*/
 .profiles-wrapper__person {
-  flex: 1;
+  min-width: 25%;
+  max-width: 25%;
   position: relative;
 }
 .person__photo img {
@@ -813,7 +926,7 @@ span.faq-icon::before {
   cursor: auto;
 
   overflow: hidden;
-  transition: max-height .5s;
+  transition: .5s;
 }
 #faq-num1:checked~.faq__questions-wrapper>.faq__question:nth-of-type(1)>.faq__answer,
 #faq-num2:checked~.faq__questions-wrapper>.faq__question:nth-of-type(2)>.faq__answer,
