--- a/app/css/style.css
+++ b/app/css/style.css
@@ -259,7 +259,6 @@ clear: both;
   border-top-right-radius: 8px;
   border-top-left-radius: 8px;
   transition: border-width .3s .1s, padding .3s;
-
   background-color: #FF9640;*/
 
   border-bottom: 3px solid #6C8CD5;
@@ -584,7 +583,6 @@ span.important-icon::before {
   transition: opacity .3s;
 }
 /* СТРЕЛКИ (ОВРЕФЛОУ МЕШАЕТ)
-
   .important__programs-wrapper::before {
   position: absolute;
   top: 50%;
@@ -596,7 +594,6 @@ span.important-icon::before {
   border-top: 4px solid rgba(70, 70, 70, 0.5);
   border-left: 4px solid rgba(70, 70, 70, 0.5);
   transform: rotate(-45deg);
-
   transition: border-color .3s;
 }
 .important__programs-wrapper::after {
@@ -610,7 +607,6 @@ span.important-icon::before {
   border-top: 4px solid rgba(70, 70, 70, 0.5);
   border-right: 4px solid rgba(70, 70, 70, 0.5);
   transform: rotate(45deg);
-
   transition: border-color .3s;
 }
 .important__programs-wrapper::after,
@@ -722,7 +718,6 @@ span.staff-icon::before {
   margin: 4vh 10% 0;
 }
 /*   СТРЕЛКИ (оверфлоу хидден мешает)
-
   .medical-staff__profiles-wrapper::before {
   position: absolute;
   top: 50%;
@@ -734,7 +729,6 @@ span.staff-icon::before {
   border-top: 4px solid rgba(70, 70, 70, 0.5);
   border-left: 4px solid rgba(70, 70, 70, 0.5);
   transform: rotate(-45deg);
-
   transition: border-color .3s;
 }
 .medical-staff__profiles-wrapper::after {
@@ -748,7 +742,6 @@ span.staff-icon::before {
   border-top: 4px solid rgba(70, 70, 70, 0.5);
   border-right: 4px solid rgba(70, 70, 70, 0.5);
   transform: rotate(45deg);
-
   transition: border-color .3s;
 }
 .medical-staff__profiles-wrapper:hover::after,
@@ -803,7 +796,6 @@ span.staff-icon::before {
   position: relative;
   width: 100%;
   padding: 3%;
-
   background: url("http://mirpozitiva.ru/uploads/posts/2016-10/1477469601_nature_gora.jpg") no-repeat;
 }
 .reviews__bg .slider-prev {
@@ -860,7 +852,6 @@ span.staff-icon::before {
 }
 .reviews__wrapper {
   display: flex;
-
   height: 300px;
   width: 80%;
   margin: 0 10%;
@@ -869,12 +860,10 @@ span.staff-icon::before {
 .review {
   display: inline-block;
   position: relative;
-
   background: rgb(255, 255, 255);
   margin: 1% 3% 3%;
   min-width: 44%;
   padding: 20px;
-
   border-radius: 40px 40px 0px 40px;
   box-shadow: 2px 2px 10px 0;
 }
@@ -1106,7 +1095,6 @@ li::before, li::after {
   width: 100%;
   height: 100%;
 }
-
 .main-nav__tab {
   transition: color 0.25s;
 }
@@ -1223,7 +1211,8 @@ li::before, li::after {
   margin: 0 auto;
   padding-top: 20px;
 }
-.page-about__title {
+.note__title {
+  display: block;
   font-size: 52px;
   font-weight: lighter;
 }
@@ -1303,11 +1292,6 @@ li::before, li::after {
   max-width: 960px;
   margin: 0 auto;
 }
-.doctors__title {
-  display: block;
-  font-size: 52px;
-  font-weight: lighter;
-}
 .doctors__wrapper {
   margin: 30px 0;
 }
@@ -1362,10 +1346,6 @@ li::before, li::after {
   margin: 0 auto;
   padding-top: 20px;
 }
-.work-forms__title {
-  font-size: 52px;
-  font-weight: lighter;
-}
 .work-forms__paragraph {
   text-indent: 30px;
   text-align: justify;
@@ -1389,4 +1369,207 @@ li::before, li::after {
   font-size: 1.2em;
   margin-top: 40px;
   color: #c68fa1;
+}
+
+
+
+
+
+
+
+
+
+
+.apartments {
+  max-width: 960px;
+  margin: 0 auto;
+}
+.apartments .room__name {
+  font-weight: lighter;
+  font-size: 34px;
+  margin: 0 0 15px 1%;
+}
+.apartments .room__photos-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+.apartments .room__link-full {
+  position: relative;
+  display: flex;
+  width: 24%;
+  margin: 0 .5% 10px;
+  max-height: 200px;
+  overflow: hidden;
+  justify-content:center;
+  align-items:center;
+  box-shadow: 0px 23px 15px -15px rgba(0,0,0,0.2);
+  border: 4px solid rgba(255, 255, 255, 0.8);
+  border-radius: 5%;
+  transition: border-radius .3s ease-in-out;
+}
+.apartments .room__link-full:hover {
+  border-radius: 40%;
+  box-shadow: 0px 23px 15px -22px rgba(0,0,0,0.2);
+}
+.apartments .room__link-full:hover::after {
+  position: absolute;
+  z-index: 2;
+  content: "";
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+.apartments .room__link-full:hover::before {
+  position: absolute;
+  z-index: 3;
+  content: "";
+  width: 100px;
+  height: 100px;
+  background-image: url(../images/eye.png);
+  background-size: cover;
+}
+.apartments .room__image {
+  display: block;
+  height: 100%;
+}
+.apartments .room:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.poems {
+  max-width: 960px;
+  margin: 0 auto;
+}
+.poems .poems__photos-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+.poems .verse__link-full {
+  position: relative;
+  display: flex;
+  width: 24%;
+  margin: 0 .5% 10px;
+  max-height: 200px;
+  overflow: hidden;
+  justify-content:center;
+  align-items:center;
+  box-shadow: 0px 23px 15px -15px rgba(0,0,0,0.2);
+  border: 4px solid rgba(255, 255, 255, 0.8);
+  border-radius: 5%;
+  transition: border-radius .3s ease-in-out;
+}
+.poems .verse__link-full:hover {
+  border-radius: 40%;
+  box-shadow: 0px 23px 15px -22px rgba(0,0,0,0.2);
+}
+.poems .verse__link-full:hover::after {
+  position: absolute;
+  z-index: 2;
+  content: "";
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+.poems .verse__link-full:hover::before {
+  position: absolute;
+  z-index: 3;
+  content: "";
+  width: 100px;
+  height: 100px;
+  background-image: url(../images/eye.png);
+  background-size: cover;
+}
+.poems .verse__image {
+  display: block;
+  height: 100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.price-page {
+  max-width: 960px;
+  margin: 0 auto;
+}
+.price-page .container {
+  display: flex;
+  flex-direction: column;
+}
+.price__row {
+  display: flex;
+  flex-direction: row;
+  border-top: 1px solid rgba(187, 187, 187, 0.2);
+
+  width: 100%;
+  padding-top: 3px;
+  padding-bottom: 3px;
+}
+.price__row:not(.first-row):hover {
+  background-color: rgba(187, 187, 187, 0.2);
+  text-shadow: rgba(0, 0, 0, 0.5) 0px 0px 1px;
+}
+.price__row:nth-child(2n+1) {
+  color: rgb(0, 125, 255);
+}
+.price__row:nth-child(2n) {
+  color: rgb(255, 152, 0);
+}
+.price-page .first-row {
+  border: none;
+  font-size: 1.3em;
+  color: inherit;
+  font-weight: lighter;
+}
+.price__row__num {
+  color: inherit;
+  flex: 1;
+  text-align: center;
+}
+.price__row__name {
+  color: inherit;
+  flex: 7;
+  box-sizing: content-box;
+  padding-left: 30px;
+}
+.price__row__name.bold {
+  text-align: center;
+}
+.price__row__measure {
+  color: inherit;
+  flex: 2;
+  text-align: center;
+}
+.price__row__value {
+  color: inherit;
+  flex: 2;
+  text-align: center;
 }
